# MotionPNGTuber

./: .gitignore  AGENTS.md  CUSTOM_MODEL_USAGE.md  README.md  auto_erase_mouth.py  auto_mouth_track_v2.py  erase_mouth_offline.py  face_track_anime_detector.py  gradio_app.py  loop_lipsync_runtime_patched_emotion_auto.py  mouth_erase_tuner_gui.py  mouth_sprite_extractor.py  mouth_sprite_extractor_gui.py  mouth_track_gui.py  preview_erase_range.py  pyproject.linuxos.toml  pyproject.toml
docs/: face-tracking-guide.md  mouth-eraser-tools.md
