[project]
name = "motionpngtuber"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = "==3.10.*"
dependencies = [
    "anime-face-detector==0.0.9",
    "mmcv-full==1.7.0",
    "mmdet==2.28.0",
    "mmpose==0.29.0",
    "numpy>=1.24.0,<2.0.0",
    "opencv-python>=4.8.0",
    "openmim>=0.3.9",
    "pillow>=10.0.0",
    "pip>=24.0",
    "scipy>=1.10.0",
    "setuptools>=60.0.0,<70.0.0",
    "sounddevice>=0.4.6",
    "torch==1.13.1+cu117",
    "torchvision==0.14.1+cu117",
    "gradio>=4.0.0"
]

[tool.uv]
override-dependencies = [
    # headless版を無効化してGUI版のopencv-pythonを使用
    "opencv-python-headless>=4.5.4.58 ; sys_platform == 'never'",
]
extra-index-url = [
    "https://download.pytorch.org/whl/cu117",
]
index-strategy = "unsafe-best-match"

[tool.uv.sources]
mmcv-full = { url = "https://download.openmmlab.com/mmcv/dist/cu117/torch1.13.0/mmcv_full-1.7.0-cp310-cp310-win_amd64.whl" }

[tool.uv.extra-build-dependencies]
chumpy = ["wheel", "pip", "setuptools"]